working on mobile media query

--- a/page1/index.html
+++ b/page1/index.html
@@ -15,6 +15,7 @@
           <span class="email-cta-title"
             >Interactive content that drives lead generation</span
           >
+
           <span class="email-cta-subtitle"
             >Create content your customers genuinely love to engage with, and
             embed lead forms within personalised results for more form
@@ -67,7 +68,7 @@
             Preference data: watch styles
           </div>
           <article class="first-row">
-            <img src="./bike.png" alt="" />
+            <img src="./images/bike.png" alt="" />
             <div class="first-row__progress-bar">
               <div class="first-row__progress">
                 <span class="first-row__progress-text"
@@ -138,7 +139,7 @@
         </div>
       </section>
 
-      <!-- description blue section -->
+      {% comment %} <!-- description blue section -->
       <section class="desc-blue-section">
         <span class="desc-blue-title"
           >EX.CO connects engagement with performance</span
@@ -148,7 +149,7 @@
           the tools available in the platform are built to help you tell stories
           more engagingly and convert customers more successfully.</span
         >
-        <img class="icon-how" src="./icon-how.png" alt="" />
+        <img class="icon-how" src="./images/icon-how.png" alt="" />
         <span class="desc-blue-how">How?</span>
         <span class="desc-blue-subtitle by-providing">
           By providing the opportunity for personalized results with
@@ -190,7 +191,7 @@
           </div>
         </article>
         <article class="separator">
-            <img src="./squiggly.png" alt="">
+            <img src="./images/squiggly.png" alt="">
         </article>
         <article class="embed2">
                       <div class="embed1-text align-right">
@@ -229,7 +230,7 @@
 
     </div>
 </div>
-      </section>
+      </section> {% endcomment %}
     </main>
   </body>
 </html>
