blue section css

--- a/page1/index.html
+++ b/page1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
   </head>
 
@@ -115,13 +115,13 @@
               which classic watches are available on the marketplace.
             </span>
             <div class="join-text">
-              <div>
+              <div class="liner-container">
                 <div class="join-liner"></div>
               </div>
-              <div>
+              <div class="join-text-container">
                 <span>Join now</span>
               </div>
-              <div>
+              <div class="liner-container">
                 <div class="join-liner"></div>
               </div>
             </div>
@@ -139,7 +139,7 @@
         </div>
       </section>
 
-      {% comment %} <!-- description blue section -->
+      <!-- description blue section -->
       <section class="desc-blue-section">
         <span class="desc-blue-title"
           >EX.CO connects engagement with performance</span
@@ -158,7 +158,7 @@
       </section>
 
       <!-- embed elements -->
-      <section class="embed-section">
+      <!-- <section class="embed-section">
         <article class="embed1">
           <div class="embed1-script">
             <script>
@@ -208,19 +208,25 @@
             </div>
           </div>
         </article>
-      </section>
+      </section> -->
       <!-- contact us -->
-      <section class="drop-a-line-section">
+      <!-- <section class="drop-a-line-section">
 <div class="drop-a-line-container">
     <div class="drop-a-line-text">
        <span class="drop-a-line-title">Drop us a line</span> 
        <span class="drop-a-line-subtitle">One of the team will get in touch to talk about how you can start capturing more leads with EX.CO</span> 
     </div>
-    <div class="drop-a-line-form">
-        <!--[if lte IE 8]>
-<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-<![endif]-->
-<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+    <div class="drop-a-line-form"> -->
+
+      <!--[if lte IE 8]>
+        <script
+          charset="utf-8"
+          type="text/javascript"
+          src="//js.hsforms.net/forms/v2-legacy.js"
+        ></script>
+      <![endif]-->
+
+      <!-- <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
 <script>
   hbspt.forms.create({
 	portalId: "6184888",
@@ -230,7 +236,7 @@
 
     </div>
 </div>
-      </section> {% endcomment %}
+      </section>  -->
     </main>
   </body>
 </html>
