mobile version done

--- a/page1/index.html
+++ b/page1/index.html
@@ -158,7 +158,7 @@
       </section>
 
       <!-- embed elements -->
-      <!-- <section class="embed-section">
+      <section class="embed-section">
         <article class="embed1">
           <div class="embed1-script">
             <script>
@@ -208,15 +208,15 @@
             </div>
           </div>
         </article>
-      </section> -->
+      </section>
       <!-- contact us -->
-      <!-- <section class="drop-a-line-section">
+       <section class="drop-a-line-section">
 <div class="drop-a-line-container">
     <div class="drop-a-line-text">
        <span class="drop-a-line-title">Drop us a line</span> 
        <span class="drop-a-line-subtitle">One of the team will get in touch to talk about how you can start capturing more leads with EX.CO</span> 
     </div>
-    <div class="drop-a-line-form"> -->
+    <div class="drop-a-line-form"> 
 
       <!--[if lte IE 8]>
         <script
@@ -226,7 +226,7 @@
         ></script>
       <![endif]-->
 
-      <!-- <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
 <script>
   hbspt.forms.create({
 	portalId: "6184888",
@@ -236,7 +236,7 @@
 
     </div>
 </div>
-      </section>  -->
+      </section>
     </main>
   </body>
 </html>
