--- a/page1/index.html
+++ b/page1/index.html
@@ -22,27 +22,11 @@
             completions and richer, more meaningful datasets about your
             customers.</span
           >
-          <div class="email-input-container">
-            <!-- <input class="email-input" type="email" />
-            <button class="email-btn">Submit</button> -->
-            <!--[if lte IE 8]>
-              <script
-                charset="utf-8"
-                type="text/javascript"
-                src="//js.hsforms.net/forms/v2-legacy.js"
-              ></script>
-            <![endif]-->
-            <script
-              charset="utf-8"
-              type="text/javascript"
-              src="//js.hsforms.net/forms/v2.js"
-            ></script>
-            <script>
-              hbspt.forms.create({
-                portalId: '6184888',
-                formId: '40b08f0b-6956-4398-83d4-88bb24f86972'
-              });
-            </script>
+          <div class="email-input-container"> 
+            <form>
+              <input type="email" name="email" id="email-input" placeholder="Enter your email here">
+              <button type="submit" class="input-email-btn">Submit</button>
+            </form>
           </div>
         </div>
       </section>
@@ -52,6 +36,8 @@
         <div class="examples-img">
           <div class="examples-img-over-1"></div>
           <div class="examples-img-over-2">
+            <img src="./images/circles.png" alt="" class="examples-img-over-2-circles">
+            <span class="examples-img-over-2-1of3">1/3</span>
             <div class="examples-img-over-2-gradient"></div>
             <span>Which describes your taste in?</span>
           </div>
@@ -216,24 +202,14 @@
        <span class="drop-a-line-title">Drop us a line</span> 
        <span class="drop-a-line-subtitle">One of the team will get in touch to talk about how you can start capturing more leads with EX.CO</span> 
     </div>
-    <div class="drop-a-line-form"> 
-
-      <!--[if lte IE 8]>
-        <script
-          charset="utf-8"
-          type="text/javascript"
-          src="//js.hsforms.net/forms/v2-legacy.js"
-        ></script>
-      <![endif]-->
-
-    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
-<script>
-  hbspt.forms.create({
-	portalId: "6184888",
-	formId: "0ad7378d-b61b-4da3-9892-bffd6d53bab8"
-});
-</script>
-
+    <div class="drop-a-line-form">
+       <form>
+         <input type="email" name="email-footer" id="email-input-footer" placeholder="Work Email">
+         <input type="text" name="first-name-footer" id="name-footer" placeholder="First Name">
+         <input type="text" name="last-name-footer" id="sname-footer" placeholder="Last Name">
+         <input type="text" name="company-name-footer" id="company-footer" placeholder="Company Name">
+              <button type="submit" class="input-email-btn-footer">Submit ></button>
+       </form>
     </div>
 </div>
       </section>
