--- a/page3/index.html
+++ b/page3/index.html
@@ -71,7 +71,7 @@
             Sun-dried tomatoes, garlic, spinach and fresh basil tossed in a pot
             with pepper flakes.
           </span>
-          <span class="res-text-subtitle">
+          <span class="res-text-subtitle second-subtitle">
             Add this recipe to your basket and collect it in-store tonight
           </span>
           <div class="join-text">
@@ -106,16 +106,17 @@
       <span class="desc-blue-subtitle">EX.CO is the engagement platform that
         drives business results.</span>
       <span class="desc-blue-subtitle by-providing">
-        All
-        the tools available in the platform are built to help you tell stories
-        more engagingly and convert customers more successfully
-        How? By providing the opportunity for personalized results with
-        personalized lead forms.
+        All the tools available in the platform are built to help you tell
+        stories more engagingly and convert customers more successfully. How? By
+        providing the opportunity for personalized results with matching CTA
+        buttons.
       </span>
     </section>
 
     <!-- embed elements -->
     <section class="embed-section">
+            <span class="embed-section-title">EX.CO in action</span>
+
       <article class="embed1">
         <div class="embed1-script">
           <script>
@@ -148,7 +149,7 @@
         <div class="embed1-text align-right">
           <span class="embed1-title">
             Provide Calls To Action only after your customer has engaged with
-            your content >
+            your content 
         </div>
         <div class="embed1-script">
           <script>(function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://embed.playbuzz.com/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'playbuzz-sdk'));</script>
