--- a/page3/index.html
+++ b/page3/index.html
@@ -115,23 +115,13 @@
 
     <!-- embed elements -->
     <section class="embed-section">
-            <span class="embed-section-title">EX.CO in action</span>
+      <span class="embed-section-title">EX.CO in action</span>
 
       <article class="embed1">
         <div class="embed1-script">
-          <script>
-            (function (d, s, id) {
-              var js,
-                fjs = d.getElementsByTagName(s)[0];
-              if (d.getElementById(id)) return;
-              js = d.createElement(s);
-              js.id = id;
-              js.src = 'https://embed.playbuzz.com/sdk.js';
-              fjs.parentNode.insertBefore(js, fjs);
-            })(document, 'script', 'playbuzz-sdk');
-          </script>
+          <script>(function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://embed.ex.co/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'playbuzz-sdk'));</script>
           <div class="playbuzz"
-               data-id="a959bdc4-5d8b-4fd4-a00d-48c0b1b7f925"
+               data-id="b643c036-c812-4a87-81c2-3aff4d3d4a73"
                data-show-share="false"
                data-show-info="false"></div>
         </div>
@@ -149,12 +139,12 @@
         <div class="embed1-text align-right">
           <span class="embed1-title">
             Provide Calls To Action only after your customer has engaged with
-            your content 
+            your content
         </div>
         <div class="embed1-script">
-          <script>(function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://embed.playbuzz.com/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'playbuzz-sdk'));</script>
+          <script>(function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://embed.ex.co/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'playbuzz-sdk'));</script>
           <div class="playbuzz"
-               data-id="3ef777ae-55b2-4813-a629-6cdebb646cd5"
+               data-id="b105a1b6-8de5-4de2-96e5-cf8cd8e03b6e"
                data-show-share="false"
                data-show-info="false"></div>
         </div>
@@ -166,19 +156,9 @@
       </article>
       <article class="embed1">
         <div class="embed1-script">
-          <script>
-            (function (d, s, id) {
-              var js,
-                fjs = d.getElementsByTagName(s)[0];
-              if (d.getElementById(id)) return;
-              js = d.createElement(s);
-              js.id = id;
-              js.src = 'https://embed.playbuzz.com/sdk.js';
-              fjs.parentNode.insertBefore(js, fjs);
-            })(document, 'script', 'playbuzz-sdk');
-          </script>
+          <script>(function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://embed.ex.co/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'playbuzz-sdk'));</script>
           <div class="playbuzz"
-               data-id="a959bdc4-5d8b-4fd4-a00d-48c0b1b7f925"
+               data-id="1cf8fba2-0e6e-4933-8cd4-ef6ac204790f"
                data-show-share="false"
                data-show-info="false"></div>
         </div>
